Network config: Only set AutoConnect to false

Setting 'AutoConnect' to true during configuration causes Shill to
attempt to connect immediately after configuration which breaks
the notification logic. By default Shill will set AutoConenct to
true on the first successful connect if not explicitly set to false.

This also adds yet more / better logging.

Bug: 809902
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ibace61a761b7adf7b5c87e8db93d54d3b3942a48
Reviewed-on: https://chromium-review.googlesource.com/940338
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539896}
Former-commit-id: 1a5003a497c23879f023b588483738146075a639